fix sewer tools listing and WGR-WHR kits

--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -230,7 +230,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        <strong>WGR 601</strong> Fluid kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>WGR 600</strong> Service kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -239,15 +239,22 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>WGR 601</strong> Fluid Service Kit</li>
-                            <li>1 x <strong>BC 410</strong> Syringe</li>
-                            <li>2 x <strong>BJ 026</strong> Port Screw</li>
+                            <li>1 x <strong>BJ 048-M</strong> Viscous Fluid, Medium - 6oz</li>
+                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe, Lock Cap</li>
+                            <li>2 x <strong>GP 049.1</strong> Seal Spacer</li>
+                            <li>2 x <strong>WGR 006</strong> Shaft Seal, Small</li>
+                            <li>2 x <strong>WGR 010</strong> Shaft Seal, Large</li>
+                            <li>1 x <strong>WGR 076</strong> O-Ring</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>WGR 048</strong> Viscous Fluid, 6oz</li>
-                            <li>3 Viscous fluid options available</li>
+                            <li>2 x <strong>WGR 009</strong> Bearing, Ball, Open (SKF ONLY)</li>
+                            <li>6 x <strong>WHR 030</strong> Torx Screw, 10-24 x 3/8, Pan Head, SS</li>
+                            <li>1 x <strong>TR200 121</strong> O-Ring</li>
+                            <li>1 x <strong>WG 014</strong> Wave Spring</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>2 x <strong>WG 008</strong> O-Ring</li>
                           </ul>
                         </div>
                       </div>
@@ -258,7 +265,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <strong>WGR 602</strong> Seal kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>WGR 601</strong> Fluid kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -267,11 +274,10 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>2 x <strong>WGR 052</strong> HP Seal Wave Spring</li>
-                            <li>1 x <strong>WGR 058</strong> HP Seal - Shaft</li>
-                            <li>1 x <strong>WGR 059</strong> HP Seal - Nut</li>
-                            <li>2 x <strong>WGR 050</strong> HP Seal - O-Ring</li>
+                            <li>1 x <strong>BJ 048-M</strong> Viscous Fluid, Medium - 6oz</li>
+                            <li>1 x <strong>BC 410.15</strong> Syringe</li>
+                            <li>1 x <strong>BC 415</strong> Syringe Tube Assembly</li>
+                            <li>2 x <strong>BJ 026</strong> Port Plug</li>
                           </ul>
                         </div>
                       </div>
@@ -282,7 +288,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="headingThree">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        <strong>WGR 610</strong> Overhaul kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>WGR 602</strong> Seal kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -291,28 +297,12 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>2 x <strong>BJ 026</strong> Port Screw</li>
+                            <li>1 x <strong>WGR 058-M90</strong> HP Seal, Shaft Side</li>
+                            <li>2 x <strong>WGR 050</strong> O-ring, 85D</li>
+                            <li>1 x <strong>WGR 059-M90</strong> HP Seal, Nut Side</li>
+                            <li>2 x <strong>WGR 052</strong> Wave Spring</li>
+                            <li>2 x <strong>GP 805</strong> Container, Round</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>GP 025-P</strong> Front Jet Plug</li>
-                            <li>1 x <strong>TR200 121</strong> Head - Shaft O-Ring</li>
-                            <li>1 x <strong>WG 008</strong> O-Ring</li>
-                            <li>1 x <strong>WG 014</strong> Wave Spring</li>
-                            <li>2 x <strong>WGR 006</strong> Shaft Seal - Outer</li>
-                            <li>2 x <strong>WGR 009</strong> Bearing</li>
-                            <li>2 x <strong>WGR 010</strong> Shaft Seal - Inner</li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-6">
-                          <ul>
-                            <li>2 x <strong>WGR 011</strong> Seal Spacer</li>
-                            <li>6 x <strong>WHR 030</strong> Torx Screws</li>
-                            <li>1 x <strong>WGR 048</strong> Viscous Fluid, 6oz</li>
-                            <li>2 x <strong>WGR 052</strong> HP Seal Wave Spring</li>
-                            <li>1 x <strong>WGR 058</strong> HP Seal - Shaft</li>
-                            <li>1 x <strong>WGR 059</strong> HP Seal - Nut</li>
-                            <li>1 x <strong>WGR 076</strong> Weep Seal O-Ring</li>
-                            <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
-                            <li>2 x <strong>WGR 050</strong> HP Seal O-Ring</li>
                           </ul>
                         </div>
                       </div>
@@ -323,7 +313,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="headingFour">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        <strong>WGR 612</strong> Tool kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>WGR 610</strong> Overhaul kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -332,11 +322,62 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
+                            <li>1 x <strong>PL 533</strong> WGR User Manual</li>
+                            <li>1 x <strong>BJ 048-M</strong> Viscous Fluid, Medium - 6oz</li>
+                            <li>1 x <strong>WGR 180</strong> WGR 180</li>
+                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe, Lock Cap</li>
+                            <li>1 x <strong>GP 049.1</strong> Syringe, Plastic, .68oz</li>
+                            <li>2 x <strong>WGR 011</strong> Seal Spacer</li>
+                            <li>2 x <strong>WGR 006</strong> Shaft Seal - Outer</li>
+                            <li>1 x <strong>WGR 076</strong> O-Ring</li>
+                            <li>2 x <strong>WGR 010</strong> Shaft Seal - Inner</li>
+                            <li>1 x <strong>GP 025-P2SS</strong> Hex Socket Plug, 1/8 NPT Male, SS</li>
+                            <li>2 x <strong>BJ 026</strong> Port Plug</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>2 x <strong>WGR 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>WGR 058-M90</strong> HP Seal, Shaft Side</li>
+                            <li>2 x <strong>WGR 050</strong> Oring, 85D</li>
+                            <li>1 x <strong>WGR 059-M90</strong> HP Seal, Nut Side</li>
+                            <li>6 x <strong>WHR 030</strong> Torx Screw, 10-24 x 3/8, Pan Head, SS</li>
+                            <li>1 x <strong>TR200 121</strong> O-Ring</li>
+                            <li>2 x <strong>WGR 052</strong> Wave Spring</li>
+                            <li>1 x <strong>WG 014</strong> Wave Spring</li>
+                            <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>2 x <strong>WG 008</strong> O-Ring</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingFive">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        <strong>WGR 612</strong> Tool kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
                             <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
                             <li>1 x <strong>WGR 181</strong> Removal Press Tube</li>
                             <li>1 x <strong>WGR 182</strong> Installation Press Tube</li>
                             <li>1 x <strong>WGR 183</strong> Hex Tool</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
                             <li>1 x <strong>WGR 184</strong> HP Seal Install Tool</li>
+                            <li>1 x <strong>WGR 186</strong> HP Seal Puller</li>
+                            <li>1 x <strong>SC287 105</strong> 2-1/2 Wrench</li>
                           </ul>
                         </div>
                       </div>
@@ -383,6 +424,10 @@ master-slider: yes
       <div class="item">
         <a href="/whr-magnum"><img class="img-responsive" src="/assets/img/product/thumb-whr-02.jpg" alt="WHR Magnum sewer jetting">
         <h5>WHR Magnum</h5></a>
+      </div>
+      <div class="item">
+        <a href="/whr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-switcher-05.jpg" alt="WHR Switcher sewer jetting">
+        <h5>WHR Switcher</h5></a>
       </div>
       <div class="item">
         <a href="/wh"><img class="img-responsive" src="/assets/img/product/thumb-wh-02.jpg" alt="Warthog WH sewer jetting">
