--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -220,24 +220,25 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BJ 048-M</strong> Visc Fluid, 6oz</li>
-                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>2 x <strong>GSS 625-20-25CU</strong> Set Screw</li>
-                            <li>2 x <strong>MJ 008</strong> Nut O-Ring</li>
-                            <li>1 x <strong>SC212 007</strong> Front Bearing</li>
-                            <li>2 x <strong>WHR 006</strong> Outer Shaft Seal</li>
+                            <li>1 x <strong>BJ 048-M</strong> Viscous Fluid, Medium - 6oz</li>
+                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe, Lock Cap</li>
+                            <li>1 x <strong>WHR 009</strong> Bearing</li>
+                            <li>1 x <strong>WHR 076</strong> Nut O-Ring</li>
+                            <li>2 x <strong>WHR 006</strong> Seal, Shaft</li>
+                            <li>1 x <strong>GP 049.1</strong> Syringe, Plastic, .68oz</li>
+                            <li>2 x <strong>WHR 010</strong> Inner Shaft Seal</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>WHR 009</strong> Rear Bearing</li>
-                            <li>2 x <strong>WHR 010</strong> Inner Shaft Seal</li>
-                            <li>2 x <strong>WHR 011</strong> Seal Spacer</li>
+                            <li>1 x <strong>SC212 007</strong> Bearing</li>
                             <li>2 x <strong>WHR 050</strong> O-Ring</li>
-                            <li>1 x <strong>WHR 076</strong> Weep Seal O-Ring</li>
-                            <li>4 x <strong>WHR 030</strong> Torx Screws</li>
                             <li>1 x <strong>WS 210</strong> O-Ring</li>
+                            <li>2 x <strong>MJ 008</strong> O-Ring</li>
+                            <li>2 x <strong>WHR 011</strong> Spacer, Seal</li>
+                            <li>4 x <strong>WHR 030</strong> Torx Screw</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
                           </ul>
                         </div>
                       </div>
@@ -257,11 +258,12 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>2 x <strong>WHR 050</strong> O-Ring</li>
-                            <li>2 x <strong>WHR 052</strong> HP Wave Spring</li>
                             <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 059</strong> HP Nut Seal</li>
+                            <li>2 x <strong>RJ 040-K</strong> O-Ring</li>
+                            <li>2 x <strong>WHR 052</strong> HP Wave Spring</li>
+                            <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
                           </ul>
                         </div>
                       </div>
@@ -281,31 +283,34 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>2 x <strong>BJ 026</strong> Port Plug</li>
-                            <li>1 x <strong>BJ 048-M</strong> Visc Fluid, 6oz</li>
-                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>GP 025-P2SS</strong> Hex Plug</li>
-                            <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>2 x <strong>GSS 625-20-25CU</strong> Set Screw</li>
-                            <li>2 x <strong>MJ 008</strong> Nut O-Ring</li>
-                            <li>1 x <strong>SC212 007</strong> Front Bearing</li>
-                            <li>2 x <strong>WHR 006</strong> Shaft Seal – Outer</li>
+                            <li>1 x <strong>BJ 048-M</strong> Visc Fluid, 6oz</li>
+                            <li>1 x <strong>WHR 029</strong> Seal, Head</li>
+                            <li>1 x <strong>WHR 014</strong> Bearing Wave Spring</li>
+                            <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
+                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe</li>
+                            <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 009</strong> Rear Bearing</li>
-                            <li>2 x <strong>WHR 010</strong> Shaft Seal – Inner</li>
+                            <li>1 x <strong>WHR 076</strong> Weep Seal O-Ring</li>
+                            <li>1 x <strong>WHR 059</strong> HP Nut Seal</li>
+                            <li>2 x <strong>WHR 006</strong> Shaft Seal – Outer</li>
+                            <li>1 x <strong>GP 049.1</strong> Syringe</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
                           <ul>
-                            <li>2 x <strong>WHR 011</strong> Seal Spacer</li>
-                            <li>1 x <strong>WHR 014</strong> Bearing Wave Spring</li>
-                            <li>4 x <strong>WHR 030</strong> Torx Screws</li>
+                            <li>1 x <strong>SC212 007</strong> Front Bearing</li>
                             <li>2 x <strong>WHR 050</strong> O-Ring</li>
-                            <li>2 x <strong>WHR 052</strong> HP Wave Spring</li>
-                            <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
-                            <li>1 x <strong>WHR 059</strong> HP Nut Seal</li>
-                            <li>1 x <strong>WHR 076</strong> Weep Seal O-Ring</li>
                             <li>1 x <strong>WS 210</strong> O-Ring</li>
-                            <li>1 x <strong>WGRA 180</strong> Torx L-Wrench</li>
+                            <li>2 x <strong>MJ 008</strong> Nut O-Ring</li>
+                            <li>2 x <strong>WHR 011</strong> Seal Spacer</li>
+                            <li>2 x <strong>WHR 052</strong> HP Wave Spring</li>
+                            <li>4 x <strong>WHR 030</strong> Torx Screws</li>
+                            <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid</li>
+                            <li>1 x <strong>GP 025-P2SS</strong> Hex Plug</li>
+                            <li>2 x <strong>WHR 010</strong> Shaft Seal – Inner</li>
+                            <li>2 x <strong>BJ 026</strong> Port Plug</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
                           </ul>
                         </div>
                       </div>
@@ -325,14 +330,14 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
+                            <li>1 x <strong>WGR 187</strong> HP Seal Puller Pin</li>
+                            <li>1 x <strong>WGR 181</strong> Removal Press Tube</li>
+                            <li>1 x <strong>WGR 183</strong> Hex Tool</li>
                             <li>1 x <strong>BA 481</strong> Bearing Removal Tool</li>
                             <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
-                            <li>1 x <strong>WGR 181</strong> Removal Press Tube</li>
                             <li>1 x <strong>WGR 182</strong> Installation Press Tube</li>
-                            <li>1 x <strong>WGR 183</strong> Hex Tool</li>
                             <li>1 x <strong>WGR 184</strong> HP Seal Install Tool</li>
                             <li>1 x <strong>WGR 186</strong> HP Seal Puller</li>
-                            <li>1 x <strong>WGR 187</strong> HP Seal Puller Pin</li>
                           </ul>
                         </div>
                       </div>
