style guide, dealer profile, etc.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide -->
+  <!-- new slide 
   <div class="ms-slide">
     <img src="/assets/img/features/bg_bronze.jpg" data-src="/assets/img/features/bg_bronze.jpg" alt="lorem ipsum dolor sit"/>  
 
@@ -50,7 +50,6 @@ landing: yes
       Place your orders by Wednesday!
     </div>
 
-<!--
     <a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2017" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
@@ -62,7 +61,6 @@ landing: yes
        data-origin="ml" 
        data-position="normal">More Info
     </a>
--->
 
     <img  class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
          data-src="/assets/img/features/thxgiving-2017.png" alt="" style=""  
@@ -75,7 +73,6 @@ landing: yes
          data-origin="mr" 
          data-position="normal" />
 
-<!--
     <img class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
        data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
@@ -87,10 +84,8 @@ landing: yes
        data-origin="mr" 
        data-position="normal"
      />
--->
 
-  </div>
-  <!-- end of slide -->
+  </div> end of slide -->
   
   <!-- new slide -->
   <div class="ms-slide">
