--- a/sewer-tools-nozzles/warthog-wd.html
+++ b/sewer-tools-nozzles/warthog-wd.html
@@ -28,7 +28,7 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/wd-02.jpg" alt="Warthog WD sewer jetting nozzle">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/wd-02.jpg" alt="Warthog WD sewer jetting nozzle" />
 <!--
             <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-01.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/nle0DdQzXMc"> </a>
@@ -62,7 +62,7 @@ master-slider: yes
         <li>Optional descaling head available</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote<
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
   </div>
 
