--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -72,7 +72,7 @@ master-slider: yes
       <ul class="feature-list">
         <li>Lightweight, modular design allows a single operator to move, set up and run</li>
         <li>Quick-swap rollers can be changed without tools to accommodate different hose sizes</li>
-        <li>Hose clamp pressure and feed rates can be romotely adjusted on the fly for repeatable, consistent cleaning</li>
+        <li>Hose clamp pressure and feed rates can be remotely adjusted on the fly for repeatable, consistent cleaning</li>
         <li>Proven reliability on the toughest jobs and most corrosive environments</li>
         <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
       </ul>
