--- a/waterblast-automation/scs-tank-cleaner.html
+++ b/waterblast-automation/scs-tank-cleaner.html
@@ -131,7 +131,17 @@ master-slider: yes
                       <td colspan="2">4-60 rpm</td>
                     </tr>
                     <tr>
-                      <th>Weight*</th>
+                      <th>Diameter</th>
+                      <td>3.5 in.</td>
+                      <td><span class="metric">89 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
                       <td>12 lb</td>
                       <td><span class="metric">5 kg</span></td>
                     </tr>
@@ -165,7 +175,17 @@ master-slider: yes
                       <td colspan="2">4-60 rpm</td>
                     </tr>
                     <tr>
-                      <th>Weight*</th>
+                      <th>Diameter</th>
+                      <td>3.5 in.</td>
+                      <td><span class="metric">89 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
                       <td>12 lb</td>
                       <td><span class="metric">5 kg</span></td>
                     </tr>
@@ -199,7 +219,17 @@ master-slider: yes
                       <td colspan="2">4-60 rpm</td>
                     </tr>
                     <tr>
-                      <th>Weight*</th>
+                      <th>Diameter</th>
+                      <td>3.5 in.</td>
+                      <td><span class="metric">89 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
                       <td>12 lb</td>
                       <td><span class="metric">5 kg</span></td>
                     </tr>
