--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -2,7 +2,7 @@
 layout: default
 page-type: landing
 title: SpinCat downhole tools by StoneAge 
-excerpt: Durable self-rotating nozzles for well service applications, SpinCat tools cut through parafin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.
+excerpt: Durable self-rotating nozzles for well service applications, SpinCat tools cut through paraffin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.
 permalink: /downhole-tools
 ---
 
@@ -96,7 +96,7 @@ permalink: /downhole-tools
     <div class="container">
       <div class="row padding-tb-30">
         <h2>Hard-Hitting Cleaning Power</h2>
-        <p class="thin">Cut through parafin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.</p>
+        <p class="thin">Cut through paraffin, asphaltine, hydrates, calcium carbonate, barium sulphate or mineral scale with ease.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4RU21ZBTzP8?rel=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
