--- a/index.html
+++ b/index.html
@@ -11,33 +11,34 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide 
+  <!-- new slide  -->
   <div class="ms-slide">
-    <img src="/assets/img/features/bg_bronze.jpg" data-src="/assets/img/features/bg_bronze.jpg" alt="lorem ipsum dolor sit"/>  
+    <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/>  
 
     <div class="ms-layer feature-h1" style="" 
       data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2200" 
-      data-delay="1000" 
+      data-delay="200" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
       data-offset-y="-83" 
       data-origin="ml" 
-      data-position="normal">Happy<br>Thanksgiving
+      data-position="normal">Happy<br>Holidays!
     </div>
 
     <div class="ms-layer" style="width:280px;"
       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2200" 
-      data-delay="800" 
+      data-delay="1200" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="5" 
+      data-offset-y="15" 
       data-origin="ml" 
       data-position="normal"   
-      data-masked="true">Our North American facilities will be closed Thursday &amp; Friday, November 23-24.
+      data-masked="true">Be sure to take a look at our holiday schedule when planning your orders
     </div>
 
+<!--
     <div class="ms-layer feature-h2" style="width:328px;"   
       data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2400" 
@@ -49,11 +50,12 @@ landing: yes
       data-position="normal">
       Place your orders by Wednesday!
     </div>
+-->
 
-    <a href="http://info.stoneagetools.com/visit-us-at-wjta-imca-expo-2017" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="http://news.stoneagetools.com/2017-holiday-schedule" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
-       data-delay="1600" 
+       data-delay="1400" 
        data-ease="easeOutQuint"        
        data-type="button"        
        data-offset-x="150" 
@@ -62,8 +64,8 @@ landing: yes
        data-position="normal">More Info
     </a>
 
-    <img  class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
-         data-src="/assets/img/features/thxgiving-2017.png" alt="" style=""  
+    <img  class="ms-layer" src="/assets/img/features/holidays-2017.png" 
+         data-src="/assets/img/features/holidays-2017.png" alt="" style=""  
          data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
          data-ease="easeOutQuint"       
          data-parallax="160" 
@@ -73,6 +75,7 @@ landing: yes
          data-origin="mr" 
          data-position="normal" />
 
+<!--
     <img class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
        data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
@@ -84,8 +87,9 @@ landing: yes
        data-origin="mr" 
        data-position="normal"
      />
+-->
 
-  </div> end of slide -->
+  </div> <!-- end of slide -->
   
   <!-- new slide -->
   <div class="ms-slide">
