--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -1433,8 +1433,8 @@ master-slider: yes
         <h5>BJV Centralizers</h5></a>
       </div>
       <div class="item">
-        <a href="/extension-nipples"><img class="img-responsive" src="/assets/img/product/thumb-extensions-01.jpg" alt="Extension nipples for high pressure jetting">
-        <h5>Extension Nipples</h5></a>
+        <a href="/pipe-extensions"><img class="img-responsive" src="/assets/img/product/thumb-extensions-01.jpg" alt="Extension nipples for high pressure jetting">
+        <h5>Pipe Extensions</h5></a>
       </div>
       <div class="item">
         <a href="/gopher"><img class="img-responsive" src="/assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
