start btc-200 updates

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide  -->
+  <!-- new slide
   <div class="ms-slide">
     <img src="/assets/img/features/bg_red.jpg" data-src="/assets/img/features/bg_red.jpg" alt="lorem ipsum dolor sit"/>  
 
@@ -38,7 +38,6 @@ landing: yes
       data-masked="true">Be sure to take a look at our holiday schedule when planning your orders
     </div>
 
-<!--
     <div class="ms-layer feature-h2" style="width:328px;"   
       data-effect="t(true,n,20,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2400" 
@@ -50,7 +49,6 @@ landing: yes
       data-position="normal">
       Place your orders by Wednesday!
     </div>
--->
 
     <a href="http://news.stoneagetools.com/2017-holiday-schedule" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
@@ -75,8 +73,7 @@ landing: yes
          data-origin="mr" 
          data-position="normal" />
 
-<!--
-    <img class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
+  <img class="ms-layer" src="/assets/img/features/thxgiving-2017.png" 
        data-src="/assets/img/features/wjta-2017-text.png" alt="" style=""  
        data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
        data-ease="easeOutQuint"       
@@ -87,9 +84,9 @@ landing: yes
        data-origin="mr" 
        data-position="normal"
      />
--->
 
-  </div> <!-- end of slide -->
+
+  </div> end of slide -->
   
   <!-- new slide -->
   <div class="ms-slide">
